--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,13 +1,12 @@
 {
-    "compilerOptions": {
-      "target": "es6",
-      "module": "commonjs",
-      "outDir": "./dist",
-      "rootDir": "./src",
-      "strict": true,
-      "esModuleInterop": true,
-      "skipLibCheck": true,
-      "forceConsistentCasingInFileNames": true
+  "compilerOptions": {
+    "baseUrl": "./src",
+    "paths": {
+      "@types/*": ["types/*"],
+      "@services/*": ["services/*"]
     },
-    "include": ["src/**/*"]
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "esModuleInterop": true
   }
+}
